tests/virtualservice_forbidden_hosts/manifests/vs-with-denied-host.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-with-denied-host
  namespace: check-kyverno
spec:
  hosts:
  - beta.opso.lan
  http:
  - route:
    - destination:
        host: valid-service
